--- a/Lab 2.ipynb
+++ b/Lab 2.ipynb
@@ -1,24 +1,173 @@
 {
- "cells": [
-  {
-   "cell_type": "markdown",
-   "id": "7b719dbf",
-   "metadata": {},
-   "source": [
-    "<h1 style=\"text-align:center;\"><b>Laboratorio 2</b></h1>\n",
-    "<h3 style=\"text-align:center;\">Marcos Díaz (221102), Daniel Machic (22118) y María José Ramírez (221051)</h3>\n",
-    "\n",
-    "**Github**: https://github.com/mac2218/Seminario-Lab02\n",
-    "\n",
-    "## Librerías"
-   ]
-  }
- ],
- "metadata": {
-  "language_info": {
-   "name": "python"
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 5
+  "nbformat": 4,
+  "nbformat_minor": 0,
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "name": "python3",
+      "display_name": "Python 3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "cells": [
+    {
+      "cell_type": "markdown",
+      "source": [
+        "<h1 style=\"text-align:center;\"><b>Laboratorio 2</b></h1>\n",
+        "<h3 style=\"text-align:center;\">Marcos Díaz (221102), Daniel Machic (22118), Maria Jose Ramírez (221051)</h3>"
+      ],
+      "metadata": {
+        "id": "DltCvAsdLSzQ"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Github**: https://github.com/mac2218/Seminario-Lab02"
+      ],
+      "metadata": {
+        "id": "AMln11NnLcII"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Librerias"
+      ],
+      "metadata": {
+        "id": "0boGZajJLXQk"
+      }
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 2,
+      "metadata": {
+        "id": "lhVgF6PsLHGc"
+      },
+      "outputs": [],
+      "source": [
+        "import numpy as np"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "\n",
+        "# Probabilidades conjuntas P(X, Y)\n",
+        "joint = np.array([\n",
+        "    [0.09, 0.16, 0.17, 0.05],  # Y=0\n",
+        "    [0.15, 0.07, 0.10, 0.21]   # Y=1\n",
+        "])\n",
+        "\n",
+        "\n",
+        "px = joint.sum(axis=0)\n",
+        "\n",
+        "\n",
+        "posterior = joint / px\n",
+        "\n",
+        "\n",
+        "decision = np.argmax(posterior, axis=0)\n",
+        "\n",
+        "# Error de Bayes\n",
+        "error = sum(px[i] * np.min(posterior[:, i]) for i in range(len(px)))\n",
+        "\n",
+        "print(\"Posteriores P(Y|X):\\n\", posterior)\n",
+        "print(\"\\nRegla óptima (0=Y0, 1=Y1):\\n\", decision)\n",
+        "print(\"\\nError de Bayes:\", error)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "_hDbmtGILIHA",
+        "outputId": "c43743e9-63d5-4a0a-97a8-c2ca31327f8b"
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Posteriores P(Y|X):\n",
+            " [[0.375      0.69565217 0.62962963 0.19230769]\n",
+            " [0.625      0.30434783 0.37037037 0.80769231]]\n",
+            "\n",
+            "Regla óptima (0=Y0, 1=Y1):\n",
+            " [1 0 0 1]\n",
+            "\n",
+            "Error de Bayes: 0.31\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Clasificador Bayesiano Óptimo\n",
+        "\n",
+        "### 1. Probabilidades posteriores\n",
+        "\n",
+        "A partir de la tabla de probabilidades conjuntas \\( P(X,Y) \\), calculamos:\n",
+        "$P(Y \\mid X=x) = \\frac{P(X=x, Y)}{P(X=x)}$\n",
+        "\n",
+        "Las probabilidades posteriores obtenidas son:\n",
+        "\n",
+        "$\n",
+        "P(Y \\mid X)$ =\n",
+        "\\begin{bmatrix}\n",
+        "0.375 & 0.6957 & 0.6296 & 0.1923 \\\\\n",
+        "0.625 & 0.3043 & 0.3704 & 0.8077\n",
+        "\\end{bmatrix}\n",
+        "\n",
+        "\n",
+        "donde la primera fila corresponde a \\( Y=0 \\) y la segunda a \\( Y=1 \\).\n",
+        "\n",
+        "---\n",
+        "\n",
+        "### 2. Regla de clasificación óptima\n",
+        "\n",
+        "El clasificador Bayesiano asigna la clase con mayor probabilidad posterior:\n",
+        "\n",
+        "$hat{y}(x) = \\arg\\max_{y \\in \\{0,1\\}} P(Y=y \\mid X=x)$\n",
+        "\n",
+        "Por lo tanto:\n",
+        "\n",
+        "$\n",
+        "\\hat{y}(1)=1, \\quad\n",
+        "\\hat{y}(2)=0, \\quad\n",
+        "\\hat{y}(3)=0, \\quad\n",
+        "\\hat{y}(4)=1\n",
+        "$\n",
+        "\n",
+        "---\n",
+        "\n",
+        "### 3. Error de Bayes\n",
+        "\n",
+        "El error mínimo de clasificación está dado por:\n",
+        "\n",
+        "$\n",
+        "P_e = \\sum_{x} P(X=x)\\min \\{P(Y=0 \\mid X=x), P(Y=1 \\mid X=x)\\}\n",
+        "$\n",
+        "Sustituyendo valores:\n",
+        "\n",
+        "$\n",
+        "P_e = 0.31\n",
+        "$\n",
+        "\n",
+        "Por lo tanto, el error del clasificador Bayesiano óptimo es:\n",
+        "\n",
+        "$\n",
+        "\\boxed{31\\%}\n",
+        "$\n"
+      ],
+      "metadata": {
+        "id": "pYKUSKO7Lxvv"
+      }
+    }
+  ]
 }
