--- a/Lab 2.ipynb
+++ b/Lab 2.ipynb
@@ -54,6 +54,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "##**Ejercicio 1**"
+      ],
+      "metadata": {
+        "id": "G1--6MgUNzvU"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "\n",
